# twitter_api_rust

./: .env  Cargo.toml  readme.md
migrations/2020-02-17-220917_user/: down.sql  up.sql
migrations/2020-02-17-222420_tweets/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  tweets.rs  users.rs
src/tweets/: handler.rs  mod.rs  repository.rs  router.rs
src/users/: handler.rs  mod.rs  repository.rs  router.rs
