[package]
name = "twitter_api"
version = "0.1.0"
authors = ["deboramartins15 <deehmartin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres","r2d2"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.15.0"
